# GitSpace

./: Cargo.toml  README.md
.cargo/: cargo.md  config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
assets/: assets.md
docs/: contrib.md  docs.md  dotnet-contracts.md  dotnet-interop.md  dotnet-setup.md  gitkraken-layout.md  release.md  roadmap.md  telemetry.md  ui-coverage.md  ui-motion-verification.md  ui-stack.md
dotnet/: dotnet.md
dotnet/GitSpace.Helper/: GitSpace.Helper.csproj  Program.cs
schemas/: credential-request.json  credential-response.json  dialog-open-request.json  dialog-open-response.json  error.json  library-call.json  library-result.json  ping-response.json
scripts/: build-dotnet.sh
src/: config.rs  error.rs  logging.rs  main.rs  src.md  telemetry.rs  update.rs
src/auth/: auth.md  mod.rs
src/dotnet/: mod.rs  tests.rs
src/git/: branch.rs  clone.rs  compare.rs  diff.rs  discovery.rs  git.md  log.rs  merge.rs  mod.rs  remote.rs  stash.rs  status.rs
src/git/tests/: mod.rs  tests.md
src/ui/: animation.rs  app.rs  auth.rs  branches.rs  clone.rs  context.rs  dev_gallery.rs  effects.rs  fonts.rs  history.rs  layout.rs  menu.rs  mod.rs  notifications.rs  perf.rs  recent.rs  repo_overview.rs  settings.rs  stage.rs  theme.rs  ui.md
src/ui/tests/: mod.rs  tests.md
tasks/: tasks.md
