[package]
name = "GitSpace"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.27", features = ["wgpu"] }
egui = "0.27"
git2 = "0.18"
poll-promise = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
keyring = "2.3"
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hostname = "0.3"
url = "2.5"
