[package]
name = "GitSpace"
version = "0.1.0"
edition = "2024"

[features]
default = []
dev-tools = ["mock-providers", "fake-repos"]
fake-repos = []
mock-providers = []

[dependencies]
eframe = { version = "0.27", features = ["wgpu"] }
egui = "0.27"
git2 = "0.18"
poll-promise = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
open = "5.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
keyring = "2.3"
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hostname = "0.3"
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "fmt", "json", "registry"] }
tracing-appender = "0.2"
argon2 = { version = "0.5", default-features = false, features = ["std"] }
hmac = "0.12"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
pem = "3"
rsa = { version = "0.9", features = ["pem", "sha2"] }
spki = { version = "0.7", features = ["alloc"] }
x509-cert = { version = "0.2", features = ["pem"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
